   will allow per member control of multiple calls as ringinuse does for
   the Queue.

Applications
------------
 * Added 'v' option to MeetMe to play voicemail greetings when a user joins/leaves
   a MeetMe conference
 * Added 'k' option to MeetMe to automatically kill the conference when there's only
   one participant left (much like a normal call bridge)

Asterisk Database
-----------------
 * The internal Asterisk database has been switched from Berkeley DB 1.86 to
   SQLite 3. An existing Berkeley astdb file can be converted with the astdb2sqlite3
   utility in the UTILS section of menuselect. If an existing astdb is found and no
   astdb.sqlite3 exists, astdb2sqlite3 will be compiled automatically. Asterisk will
   convert an existing astdb to the SQLite3 version automatically at runtime.

Asterisk Modules
----------------
 * Modules marked as deprecated are no longer marked as building by default. Enabling
   these modules is still available via menuselect.

IAX2 Changes
------------
 * authdebug is now disabled by default. To enable this functionaility again
   set authdebug = yes in iax.conf.

RTP Changes
-----------
 * The rtp.conf setting "strictrtp" is now enabled by default. In previous
   releases it was disabled.

PBX Core
--------
 * The PBX core previously made a call with a non-existing extension test for
   extension s@default and jump there if the extension existed.
   This was a bad default behaviour and violated the principle of least surprise.
   It has therefore been changed in this release. It may affect some
   applications and configurations that rely on this behaviour. Most channel
   drivers have avoided this for many releases by testing whether the extension
   called exists before starting the PBX and generating a local error.
   This behaviour still exists and works as before.

   Extension "s" is used when no extension is given in a channel driver,
   like immediate answer in DAHDI or calling to a domain with no user part